--- a/.github/workflows/deploy_infra.yml
+++ b/.github/workflows/deploy_infra.yml
@@ -135,6 +135,7 @@ jobs:
           deployed 🚀✅
 
     - name: Generate token
+      if: always()
       id: generate-token
       uses: actions/create-github-app-token@v1
       with:
@@ -142,6 +143,7 @@ jobs:
         private-key: ${{ secrets.ISSUE_OPS_APP_PEM }}      
     
     - name: Get the project ID and put as an output
+      if: always()
       id: project_id
       run: |
         PROJECT_ID=$(gh project view ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq .id)        
@@ -165,6 +167,7 @@ jobs:
 
 
     - name: Get the project item ID and put as an output
+      if: always()
       id: project_item_id
       run: |       
         ISSUE_IN_PROJECT_ID=$(gh project item-list ${{ env.PROJECT_NUMBER }}  --limit ${{ github.event.issue.number }} --owner ${{ env.ORG_NAME }} --format json | jq '.items[] | select(.content.number == ${{ github.event.issue.number }})' | jq .id)
@@ -174,6 +177,7 @@ jobs:
 
     
     - name : Get the status field ID and put as an output
+      if: always()
       id: status_field_id
       run: |
         STATUS_FIELD_ID=$(gh project field-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq '.fields[] | select(.name == "Status") | .id')     
@@ -218,6 +222,7 @@ jobs:
 
 
     - name: Check values
+      if: always()
       run: |
         echo "Project ID: ${{ steps.project_id.outputs.project_id }}"
         echo "Project Item ID: ${{ steps.project_item_id.outputs.project_item_id }}"
