--- a/.github/workflows/deploy_infra.yml
+++ b/.github/workflows/deploy_infra.yml
@@ -170,19 +170,27 @@ jobs:
       env:
         GH_TOKEN: ${{ steps.generate-token.outputs.token }}
 
+    - name: Try to get the status field ID
+      if: always()
+      run: |
+        gh project field-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq  '.fields[] |  select(.id == ${{ steps.status_field_id.outputs.status_field_id }} | .options[] | select(.name == "Failed 🚀💥") | .id'
+      env:
+        GH_TOKEN: ${{ steps.generate-token.outputs.token }}
+    
     - name: Change the status to Failed 🚀💥
       if: failure()
       run: |
 
-        FAILED_STATUS_ID=$(gh project field-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq  '.fields[] |  select(.name == "Status") | .options[] | select(.name == "Failed 🚀💥") | .id')
-
-        echo "failed_status_id=$FAILED_STATUS_ID" >> $GITHUB_OUTPUT
+        FAILED_STATUS_ID=$(gh project field-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq  '.fields[] |  select(.id == ${{ steps.status_field_id.outputs.status_field_id }} | .options[] | select(.name == "Failed 🚀💥") | .id')        
 
         gh project item-edit \
         --id ${{ steps.project_item_id.outputs.project_item_id }} \
         --field-id ${{ steps.status_field_id.outputs.status_field_id }} \
         --single-select-option-id $FAILED_STATUS_ID \
         --project-id ${{ steps.project_id.outputs.project_id }}
+
+        echo "failed_status_id=$FAILED_STATUS_ID" >> $GITHUB_OUTPUT
+
       env:
         GH_TOKEN: ${{ steps.generate-token.outputs.token }}
 
