--- a/.github/workflows/deploy_infra.yml
+++ b/.github/workflows/deploy_infra.yml
@@ -177,19 +177,24 @@ jobs:
       env:
         GH_TOKEN: ${{ steps.generate-token.outputs.token }}
     
+    - name: Get the failed status ID and put as an output
+      if: always()
+      id: failed_status_id
+      run: |
+        FAILED_STATUS_ID=$(gh project field-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq  '.fields[] |  select(.id == ${{ steps.status_field_id.outputs.status_field_id }}) | .options[] | select(.name == "Failed 🚀💥") | .id')
+        echo "failed_status_id=$FAILED_STATUS_ID" >> $GITHUB_OUTPUT
+      env:
+        GH_TOKEN: ${{ steps.generate-token.outputs.token }}
+
     - name: Change the status to Failed 🚀💥
       if: failure()
-      run: |
-
-        FAILED_STATUS_ID=$(gh project field-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq  '.fields[] |  select(.id == ${{ steps.status_field_id.outputs.status_field_id }}) | .options[] | select(.name == "Failed 🚀💥") | .id')        
+      run: |        
 
         gh project item-edit \
         --id ${{ steps.project_item_id.outputs.project_item_id }} \
         --field-id ${{ steps.status_field_id.outputs.status_field_id }} \
-        --single-select-option-id $FAILED_STATUS_ID \
-        --project-id ${{ steps.project_id.outputs.project_id }}
-
-        echo "failed_status_id=$FAILED_STATUS_ID" >> $GITHUB_OUTPUT
+        --single-select-option-id ${{ steps.failed_status_id.outputs.failed_status_id }} \
+        --project-id ${{ steps.project_id.outputs.project_id }}        
 
       env:
         GH_TOKEN: ${{ steps.generate-token.outputs.token }}
@@ -202,19 +207,25 @@ jobs:
       env:
         GH_TOKEN: ${{ steps.generate-token.outputs.token }}
 
+
+    - name: Get the deployed status ID and put as an output
+      if: always()
+      id: deployed_status_id
+      run: |
+        DEPLOYED_STATUS_ID=$(gh project field-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq  '.fields[] |  select(.id == ${{ steps.status_field_id.outputs.status_field_id }}) | .options[] | select(.name == "Deployed 🚀✅") | .id')
+        echo "deployed_status_id=$DEPLOYED_STATUS_ID" >> $GITHUB_OUTPUT
+      env:
+        GH_TOKEN: ${{ steps.generate-token.outputs.token }}
+
     - name: Change the status to Deployed 🚀
       id: deployed_status_id
       if: success()
-      run: |
-
-       DEPLOYED_STATUS_ID=$(gh project field-list ${{ env.PROJECT_NUMBER }} --owner ${{ env.ORG_NAME }} --format json | jq '.fields[] |  select(.id == ${{ steps.status_field_id.outputs.status_field_id }}) | .options[] | select(.name == "Deployed 🚀") | .id')
-
-       echo "deployed_status_id=$DEPLOYED_STATUS_ID" >> $GITHUB_OUTPUT
+      run: |       
 
         gh project item-edit \
         --id ${{ steps.project_item_id.outputs.project_item_id }} \
         --field-id ${{ steps.status_field_id.outputs.status_field_id }} \
-        --single-select-option-id "$DEPLOYED_STATUS_ID" \
+        --single-select-option-id ${{ steps.deployed_status_id.outputs.deployed_status_id }} \
         --project-id ${{ steps.project_id.outputs.project_id }}
       env:
         GH_TOKEN: ${{ steps.generate-token.outputs.token }}
